v2/Assembler/Spect.Net.BasicParser/Generated/ZxBasicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dotne\source\repos\spectnetide\v2\Assembler\AntlrZxBasicParserGenerator\AntlrZxBasicParserGenerator\ZxBasic.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Spect.Net.BasicParser.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class ZxBasicParser : Parser {
	public const int
		WS=1, ASM_SECTION=2, COLON=3, UNDERSCORE=4, SINGLE_QUOTE=5, SLASH=6, DOLLAR=7, 
		SCOLON=8, COMSEP=9, COMMA=10, ASSIGN=11, LPAR=12, RPAR=13, LSBRAC=14, 
		RSBRAC=15, QMARK=16, PLUS=17, MINUS=18, VBAR=19, UPARR=20, AMP=21, EQOP=22, 
		CIEQOP=23, NEQOP=24, CINEQOP=25, LTOP=26, LTEOP=27, GTOP=28, GTEOP=29, 
		LSHOP=30, RSHOP=31, MULOP=32, DIVOP=33, DOT=34, DECNUM=35, REALNUM=36, 
		BLOCK_COMMENT=37, LINE_COMMENT=38, NOTEQ=39, ABS=40, ACS=41, AND=42, ALIGN=43, 
		ASC=44, ASN=45, AT=46, ATN=47, ATTR=48, BAND=49, BNOT=50, BOR=51, BXOR=52, 
		BEEP=53, BOLD=54, BORDER=55, BRIGHT=56, BYREF=57, BYVAL=58, CAST=59, CHR=60, 
		CIRCLE=61, CLS=62, CODE=63, CONST=64, CONTINUE=65, COS=66, CSRLIN=67, 
		DECLARE=68, DIM=69, DO=70, DATA=71, DRAW=72, ELSE=73, ELSEIF=74, END=75, 
		EXIT=76, EXP=77, FASTCALL=78, FLASH=79, FOR=80, FUNCTION=81, GETKEY=82, 
		GETKEYSCANCODE=83, GO=84, GOTO=85, GOSUB=86, HEX=87, HEX16=88, IF=89, 
		IN=90, INK=91, INKEY=92, INPUT=93, INT=94, INVERSE=95, ITALIC=96, LBOUND=97, 
		LCASE=98, LET=99, LEN=100, LN=101, LOAD=102, LOOP=103, MOD=104, MULTIKEYS=105, 
		NEXT=106, NOT=107, OR=108, OVER=109, OUT=110, PAPER=111, PAUSE=112, PEEK=113, 
		PI=114, PLOT=115, POINT=116, POKE=117, POS=118, PRINT=119, PRINT42=120, 
		PRINTAT42=121, PRINT64=122, PRINTAT64=123, RANDOMIZE=124, READ=125, REM=126, 
		RESTORE=127, RETURN=128, RND=129, SAVE=130, SCREEN=131, SGN=132, SHL=133, 
		SHR=134, SIN=135, SQR=136, STDCALL=137, STEP=138, STOP=139, STR=140, SUB=141, 
		TAN=142, THEN=143, TO=144, UBOUND=145, UCASE=146, UNTIL=147, VAL=148, 
		VERIFY=149, WEND=150, WHILE=151, XOR=152, HEXNUM=153, BINNUM=154, IDENTIFIER=155, 
		IDSTART=156, IDCONT=157, STRING=158, LINE_END=159, ErrorCharacter=160;
	public const int
		RULE_compileUnit = 0, RULE_label = 1, RULE_line = 2, RULE_line_item = 3, 
		RULE_asm_section = 4, RULE_keyword = 5, RULE_function = 6, RULE_operator = 7, 
		RULE_special = 8, RULE_number = 9, RULE_identifier = 10, RULE_string = 11, 
		RULE_comment = 12, RULE_block_comment = 13, RULE_line_comment = 14;
	public static readonly string[] ruleNames = {
		"compileUnit", "label", "line", "line_item", "asm_section", "keyword", 
		"function", "operator", "special", "number", "identifier", "string", "comment", 
		"block_comment", "line_comment"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "':'", "'_'", "'''", null, "'$'", "';'", "'//'", "','", 
		"'='", "'('", "')'", "'['", "']'", "'?'", "'+'", "'-'", "'|'", "'^'", 
		"'&'", "'=='", "'==='", "'!='", "'!=='", "'<'", "'<='", "'>'", "'>='", 
		"'<<'", "'>>'", "'*'", null, "'.'", null, null, null, null, "'<>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "ASM_SECTION", "COLON", "UNDERSCORE", "SINGLE_QUOTE", "SLASH", 
		"DOLLAR", "SCOLON", "COMSEP", "COMMA", "ASSIGN", "LPAR", "RPAR", "LSBRAC", 
		"RSBRAC", "QMARK", "PLUS", "MINUS", "VBAR", "UPARR", "AMP", "EQOP", "CIEQOP", 
		"NEQOP", "CINEQOP", "LTOP", "LTEOP", "GTOP", "GTEOP", "LSHOP", "RSHOP", 
		"MULOP", "DIVOP", "DOT", "DECNUM", "REALNUM", "BLOCK_COMMENT", "LINE_COMMENT", 
		"NOTEQ", "ABS", "ACS", "AND", "ALIGN", "ASC", "ASN", "AT", "ATN", "ATTR", 
		"BAND", "BNOT", "BOR", "BXOR", "BEEP", "BOLD", "BORDER", "BRIGHT", "BYREF", 
		"BYVAL", "CAST", "CHR", "CIRCLE", "CLS", "CODE", "CONST", "CONTINUE", 
		"COS", "CSRLIN", "DECLARE", "DIM", "DO", "DATA", "DRAW", "ELSE", "ELSEIF", 
		"END", "EXIT", "EXP", "FASTCALL", "FLASH", "FOR", "FUNCTION", "GETKEY", 
		"GETKEYSCANCODE", "GO", "GOTO", "GOSUB", "HEX", "HEX16", "IF", "IN", "INK", 
		"INKEY", "INPUT", "INT", "INVERSE", "ITALIC", "LBOUND", "LCASE", "LET", 
		"LEN", "LN", "LOAD", "LOOP", "MOD", "MULTIKEYS", "NEXT", "NOT", "OR", 
		"OVER", "OUT", "PAPER", "PAUSE", "PEEK", "PI", "PLOT", "POINT", "POKE", 
		"POS", "PRINT", "PRINT42", "PRINTAT42", "PRINT64", "PRINTAT64", "RANDOMIZE", 
		"READ", "REM", "RESTORE", "RETURN", "RND", "SAVE", "SCREEN", "SGN", "SHL", 
		"SHR", "SIN", "SQR", "STDCALL", "STEP", "STOP", "STR", "SUB", "TAN", "THEN", 
		"TO", "UBOUND", "UCASE", "UNTIL", "VAL", "VERIFY", "WEND", "WHILE", "XOR", 
		"HEXNUM", "BINNUM", "IDENTIFIER", "IDSTART", "IDCONT", "STRING", "LINE_END", 
		"ErrorCharacter"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ZxBasic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ZxBasicParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(ZxBasicParser.Eof, 0); }
		public Asm_sectionContext[] asm_section() {
			return GetRuleContexts<Asm_sectionContext>();
		}
		public Asm_sectionContext asm_section(int i) {
			return GetRuleContext<Asm_sectionContext>(i);
		}
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public LabelContext[] label() {
			return GetRuleContexts<LabelContext>();
		}
		public LabelContext label(int i) {
			return GetRuleContext<LabelContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZxBasicVisitor<TResult> typedVisitor = visitor as IZxBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASM_SECTION) | (1L << ASSIGN) | (1L << PLUS) | (1L << MINUS) | (1L << UPARR) | (1L << AMP) | (1L << LTOP) | (1L << LTEOP) | (1L << GTOP) | (1L << GTEOP) | (1L << LSHOP) | (1L << RSHOP) | (1L << MULOP) | (1L << DIVOP) | (1L << DECNUM) | (1L << REALNUM) | (1L << BLOCK_COMMENT) | (1L << LINE_COMMENT) | (1L << NOTEQ) | (1L << ABS) | (1L << ACS) | (1L << AND) | (1L << ALIGN) | (1L << ASC) | (1L << ASN) | (1L << AT) | (1L << ATN) | (1L << ATTR) | (1L << BAND) | (1L << BNOT) | (1L << BOR) | (1L << BXOR) | (1L << BEEP) | (1L << BOLD) | (1L << BORDER) | (1L << BRIGHT) | (1L << BYREF) | (1L << BYVAL) | (1L << CAST) | (1L << CHR) | (1L << CIRCLE) | (1L << CLS) | (1L << CODE))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (CONST - 64)) | (1L << (CONTINUE - 64)) | (1L << (COS - 64)) | (1L << (CSRLIN - 64)) | (1L << (DECLARE - 64)) | (1L << (DIM - 64)) | (1L << (DO - 64)) | (1L << (DATA - 64)) | (1L << (DRAW - 64)) | (1L << (ELSE - 64)) | (1L << (ELSEIF - 64)) | (1L << (END - 64)) | (1L << (EXIT - 64)) | (1L << (EXP - 64)) | (1L << (FASTCALL - 64)) | (1L << (FLASH - 64)) | (1L << (FOR - 64)) | (1L << (FUNCTION - 64)) | (1L << (GETKEY - 64)) | (1L << (GETKEYSCANCODE - 64)) | (1L << (GOTO - 64)) | (1L << (GOSUB - 64)) | (1L << (HEX - 64)) | (1L << (HEX16 - 64)) | (1L << (IF - 64)) | (1L << (IN - 64)) | (1L << (INK - 64)) | (1L << (INKEY - 64)) | (1L << (INPUT - 64)) | (1L << (INT - 64)) | (1L << (INVERSE - 64)) | (1L << (ITALIC - 64)) | (1L << (LBOUND - 64)) | (1L << (LCASE - 64)) | (1L << (LET - 64)) | (1L << (LEN - 64)) | (1L << (LN - 64)) | (1L << (LOAD - 64)) | (1L << (LOOP - 64)) | (1L << (MOD - 64)) | (1L << (MULTIKEYS - 64)) | (1L << (NEXT - 64)) | (1L << (NOT - 64)) | (1L << (OR - 64)) | (1L << (OVER - 64)) | (1L << (OUT - 64)) | (1L << (PAPER - 64)) | (1L << (PAUSE - 64)) | (1L << (PEEK - 64)) | (1L << (PI - 64)) | (1L << (PLOT - 64)) | (1L << (POINT - 64)) | (1L << (POKE - 64)) | (1L << (POS - 64)) | (1L << (PRINT - 64)) | (1L << (PRINT42 - 64)) | (1L << (PRINTAT42 - 64)) | (1L << (PRINT64 - 64)) | (1L << (PRINTAT64 - 64)) | (1L << (RANDOMIZE - 64)) | (1L << (READ - 64)) | (1L << (REM - 64)) | (1L << (RESTORE - 64)))) != 0) || ((((_la - 128)) & ~0x3f) == 0 && ((1L << (_la - 128)) & ((1L << (RETURN - 128)) | (1L << (RND - 128)) | (1L << (SAVE - 128)) | (1L << (SCREEN - 128)) | (1L << (SGN - 128)) | (1L << (SHL - 128)) | (1L << (SHR - 128)) | (1L << (SIN - 128)) | (1L << (SQR - 128)) | (1L << (STDCALL - 128)) | (1L << (STEP - 128)) | (1L << (STOP - 128)) | (1L << (STR - 128)) | (1L << (SUB - 128)) | (1L << (TAN - 128)) | (1L << (THEN - 128)) | (1L << (TO - 128)) | (1L << (UBOUND - 128)) | (1L << (UCASE - 128)) | (1L << (UNTIL - 128)) | (1L << (VAL - 128)) | (1L << (VERIFY - 128)) | (1L << (WEND - 128)) | (1L << (WHILE - 128)) | (1L << (XOR - 128)) | (1L << (HEXNUM - 128)) | (1L << (BINNUM - 128)) | (1L << (IDENTIFIER - 128)) | (1L << (STRING - 128)) | (1L << (LINE_END - 128)) | (1L << (ErrorCharacter - 128)))) != 0)) {
				{
				State = 35;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case ASM_SECTION:
					{
					State = 30; asm_section();
					}
					break;
				case ASSIGN:
				case PLUS:
				case MINUS:
				case UPARR:
				case AMP:
				case LTOP:
				case LTEOP:
				case GTOP:
				case GTEOP:
				case LSHOP:
				case RSHOP:
				case MULOP:
				case DIVOP:
				case DECNUM:
				case REALNUM:
				case BLOCK_COMMENT:
				case LINE_COMMENT:
				case NOTEQ:
				case ABS:
				case ACS:
				case AND:
				case ALIGN:
				case ASC:
				case ASN:
				case AT:
				case ATN:
				case ATTR:
				case BAND:
				case BNOT:
				case BOR:
				case BXOR:
				case BEEP:
				case BOLD:
				case BORDER:
				case BRIGHT:
				case BYREF:
				case BYVAL:
				case CAST:
				case CHR:
				case CIRCLE:
				case CLS:
				case CODE:
				case CONST:
				case CONTINUE:
				case COS:
				case CSRLIN:
				case DECLARE:
				case DIM:
				case DO:
				case DATA:
				case DRAW:
				case ELSE:
				case ELSEIF:
				case END:
				case EXIT:
				case EXP:
				case FASTCALL:
				case FLASH:
				case FOR:
				case FUNCTION:
				case GETKEY:
				case GETKEYSCANCODE:
				case GOTO:
				case GOSUB:
				case HEX:
				case HEX16:
				case IF:
				case IN:
				case INK:
				case INKEY:
				case INPUT:
				case INT:
				case INVERSE:
				case ITALIC:
				case LBOUND:
				case LCASE:
				case LET:
				case LEN:
				case LN:
				case LOAD:
				case LOOP:
				case MOD:
				case MULTIKEYS:
				case NEXT:
				case NOT:
				case OR:
				case OVER:
				case OUT:
				case PAPER:
				case PAUSE:
				case PEEK:
				case PI:
				case PLOT:
				case POINT:
				case POKE:
				case POS:
				case PRINT:
				case PRINT42:
				case PRINTAT42:
				case PRINT64:
				case PRINTAT64:
				case RANDOMIZE:
				case READ:
				case REM:
				case RESTORE:
				case RETURN:
				case RND:
				case SAVE:
				case SCREEN:
				case SGN:
				case SHL:
				case SHR:
				case SIN:
				case SQR:
				case STDCALL:
				case STEP:
				case STOP:
				case STR:
				case SUB:
				case TAN:
				case THEN:
				case TO:
				case UBOUND:
				case UCASE:
				case UNTIL:
				case VAL:
				case VERIFY:
				case WEND:
				case WHILE:
				case XOR:
				case HEXNUM:
				case BINNUM:
				case IDENTIFIER:
				case STRING:
				case LINE_END:
				case ErrorCharacter:
					{
					State = 32;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						State = 31; label();
						}
						break;
					}
					State = 34; line();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 39;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 40; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public ITerminalNode DECNUM() { return GetToken(ZxBasicParser.DECNUM, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ZxBasicParser.IDENTIFIER, 0); }
		public ITerminalNode COLON() { return GetToken(ZxBasicParser.COLON, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZxBasicVisitor<TResult> typedVisitor = visitor as IZxBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_label);
		try {
			State = 45;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case DECNUM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; Match(DECNUM);
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 43; Match(IDENTIFIER);
				State = 44; Match(COLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode LINE_END() { return GetToken(ZxBasicParser.LINE_END, 0); }
		public Line_itemContext[] line_item() {
			return GetRuleContexts<Line_itemContext>();
		}
		public Line_itemContext line_item(int i) {
			return GetRuleContext<Line_itemContext>(i);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZxBasicListener typedListener = listener as IZxBasicListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZxBasicVisitor<TResult> typedVisitor = visitor as IZxBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}
